--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,76 @@
-.bodyindex{
-    background-color: white;
+.bodyindex {
+  background-color: white;
 }
 
-.menutitulo{
-    font-size: 30px;
-    font-weight: 900;
+.menutitulo {
+  font-size: 30px;
+  font-weight: 900;
 }
 
-.iconsmenu{
-    max-width: 30px;
-    max-height: 30px;
+.iconsmenu {
+  max-width: 30px;
+  max-height: 30px;
 }
 
 .logo {
-    position: absolute; /* posicione a imagem absolutamente */
-    pointer-events: none; /* permite que os eventos de clique sejam propagados para a navbar */
-    top: 1%; /* ajuste a posição vertical da imagem para o topo */
-    left: 0.5%; /* centralize a imagem horizontalmente */
-    width: 150px; /* ajuste o tamanho da imagem */
-    height: 150px; /* ajuste o tamanho da imagem */
-    transform: rotate(-25deg); /* rotaciona a imagem 45 graus */
-  }
-
-  .nav-advanced {
-    margin-left: 145px; /* ajuste o espaçamento para a esquerda */
-  }
-
-  .socials-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    margin-bottom: 0;
-  }
-
-  .socials-icon {
-    font-size: 20px;
-    color: white;
-  }
-
-.carousel {
-  position: relative;
-  width: 800px;
-  height: 600px;
-  overflow: hidden;
-  margin: 0 auto;
+  position: absolute;
+  pointer-events: none;
+  top: 1%;
+  left: 0.5%;
+  width: 150px;
+  height: auto;
+  max-width: 20%;
+  transform: rotate(-25deg);
 }
 
-.carousel-inner {
-  position: relative;
+.nav-advanced {
+  margin-left: 145px;
+}
+
+.socials-container {
   display: flex;
-  width: 100%;
-  height: 100%;
+  flex-direction: row;
+  align-items: center;
   justify-content: center;
+  gap: 15px;
+  margin-bottom: 0;
+}
+
+.socials-icon {
+  font-size: 20px;
+  color: white;
+}
+
+footer {
+  padding-bottom: 10px;
+}
+
+.carousel-container {
+  margin: 20px auto;
 }
 
 .carousel-inner img {
   width: 100%;
-  height: 100%;
-  object-fit: contain; /* mudado de cover para contain */
-  opacity: 0;
-  transition: opacity 1s;
+  height: auto;
+  object-fit: cover;
+  border-radius: 10px; /* Cantos arredondados nas imagens do carrossel */
 }
 
-.carousel-inner img.active {
-  opacity: 1;
+.banner-gif {
+  width: 100%;
+  height: auto;
 }
 
-.prev, .next {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background-color: #fff;
-  border: none;
-  padding: 10px;
-  cursor: pointer;
+.rounded-banner {
+  border-radius: 10px !important; /* Força os cantos arredondados na imagem do banner */
 }
 
-.prev {
-  left: 10px;
+.btn-dark {
+  background-color: black;
+  border-color: black;
 }
 
-.next {
-  right: 10px;
+.btn-dark:hover {
+  background-color: #333;
+  border-color: #333;
 }
