--- a/css/stylestore.css
+++ b/css/stylestore.css
@@ -61,7 +61,7 @@
     text-align: center;
 }
 
-.cart-div-col-10{
+.cart-div-col{
     background-color: black;
     margin-left: auto;
     margin-right: auto;
