--- a/css/stylestore.css
+++ b/css/stylestore.css
@@ -195,6 +195,23 @@
     width: 10px;
 }
 
+.form-login{
+    width: 30%;
+    margin-right: auto;
+    margin-left: auto;
+    color: white;
+}
+
+.div-form-login{
+    background-color: black;
+    padding: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+
+
+
 @media (max-width: 400px) {
     .cart-label-text{
         position: fixed;
