--- a/css/stylestore.css
+++ b/css/stylestore.css
@@ -1,8 +1,7 @@
 /* Reset básico */
 html, body {
     height: 100%;
-    margin: 0;
-    padding: 0;
+    margin-top: 30px;
 }
 
 /* Container principal */
@@ -276,7 +275,7 @@ max-height: 30px;
 }
 
 .logo {
-position: absolute;
+position: fixed;
 pointer-events: none;
 top: 1%;
 left: 0.5%;
