--- a/css/stylestore.css
+++ b/css/stylestore.css
@@ -216,18 +216,19 @@ body {
 }
 
 .form-login{
-    width: 30%;
+    width: 70%;
     margin-right: auto;
     margin-left: auto;
-    color: white;
+    color: black;
 }
 
 .div-form-login{
-    background-color: black;
+    background-color: #f8f9fa;
     padding: 3%;
     margin-left: auto;
     margin-right: auto;
     border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .user-name-icon-login{
@@ -239,7 +240,10 @@ body {
     text-decoration: none;
 }
 
-
+.condiction-user-login{
+    font-weight: 700;
+    font-size: clamp(0rem, 0.7vw, 0.7rem);
+}
 
 
 @media (max-width: 500px) {
@@ -258,6 +262,7 @@ body {
         top: 0%;
         transform: translate(0px,15px);
     }
+
 }
 
 .bodyindex {
