--- a/css/stylestore.css
+++ b/css/stylestore.css
@@ -223,6 +223,7 @@ body {
 }
 
 .div-form-login{
+    width: 80%;
     background-color: #f8f9fa;
     padding: 3%;
     margin-left: auto;
@@ -363,4 +364,26 @@ font-size: 16px; /* Tamanho da fonte do texto */
 line-height: 1.6; /* Altura da linha para legibilidade */
 color: #343a40; /* Cor do texto */
 text-align: justify; /* Justifica o texto */
+}
+
+.selectPay{
+    width: 100%;
+    border-radius: 20px;
+    height: 50px;
+    text-align: center;
+    font-weight: 900;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.mostrar-card{
+    display: none;
+}
+
+.mostrar-mbWay{
+    display: block;
+}
+
+.img-mbway{
+    width: 70%;
 }
